2008-06-30  Jorn Baayen  <jorn@openedhand.com>
	* Makefile.am:
	* audio-player.c:
	* audio-player.h:
	* configure.ac:
	* main.c (set_playing_row), (eos_cb), (add_uri),
	(tag_reader_uri_scanned_cb), (play_pause_button_toggled_cb),
	(main):
	* tag-reader.c:
	* tag-reader.h:

	Use libowl-av.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,20 +8,7 @@ LDADD = $(DEPS_LIBS)
 
 gaku_SOURCES = \
 	main.c \
-	audio-player.c audio-player.h \
-	playlist-parser.c playlist-parser.h \
-	tag-reader.c tag-reader.h \
-	marshal.c marshal.h
-
-%.h: %.list
-	$(GLIB_GENMARSHAL) --prefix=$* $< --header > $@
-
-%.c: %.list
-	$(GLIB_GENMARSHAL) --prefix=$* $< --body > $@
-
-EXTRA_DIST = marshal.list
-BUILT_SOURCES = marshal.c marshal.h
-CLEANFILES = $(BUILT_SOURCES)
+	playlist-parser.c playlist-parser.h
 
 desktopdir = $(datadir)/applications
 dist_desktop_DATA = gaku.desktop
