--- a/configure.ac
+++ b/configure.ac
@@ -1,15 +1,12 @@
 AC_PREREQ(2.52)
 AC_INIT(gaku, 0.1, http://o-hand.com)
-AC_CONFIG_SRCDIR(audio-player.c)
+AC_CONFIG_SRCDIR(main.c)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CPP
 AC_PROG_CC
 
-PKG_CHECK_MODULES(DEPS, gtk+-2.0 gstreamer-0.10)
-
-GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`  
-AC_SUBST(GLIB_GENMARSHAL)
+PKG_CHECK_MODULES(DEPS, gtk+-2.0 gstreamer-0.10 libowl-av)
 
 AC_OUTPUT([Makefile])
